# pbmetric

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: assigned_issues.graphql  git.rs  github.graphql  github.rs  issue.rs  main.rs  merged_pull_requests.graphql  open_pull_requests.graphql  pull_requests.graphql  recent_issues.graphql  report.rs
