[package]
name = "pbmetric"
version = "0.5.4"
description = """
pbmetric collects metrics from various tools and services to help Petabi members improve productivity."""
readme = "README.md"
homepage = "https://github.com/petabi/pbmetric"
repository = "https://github.com/petabi/pbmetric"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
chrono = "0.4"
directories = "4"
graphql_client = "0.11"
lettre = "0.10"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1",  features = ["derive"] }
toml = "0.5"
walkdir = "2"
