[package]
name = "pbmetric"
version = "0.6.0"
description = """
pbmetric collects metrics from various tools and services to help Petabi members improve productivity."""
readme = "README.md"
homepage = "https://github.com/petabi/pbmetric"
repository = "https://github.com/petabi/pbmetric"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
chrono = "0.4"
directories = "6"
graphql_client = "0.14"
lettre = "0.11"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
walkdir = "2"

[lints.clippy]
pedantic = "warn"
